--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ buildscript {
     repositories {
         gradlePluginPortal()
         google()
+        jcenter()
         mavenCentral()
+//        maven { url 'https://dl.bintray.com/textile/maven' }
         maven { url "https://jitpack.io" }
         maven { url "https://maven.aliyun.com/repository/releases" }
         maven { url "https://maven.aliyun.com/repository/public" }
@@ -19,12 +21,14 @@ buildscript {
         classpath("com.android.tools:r8:8.5.35")
         classpath 'com.yanzhenjie.andserver:plugin:2.1.12'
         classpath "com.chaquo.python:gradle:12.0.1"
+        classpath 'io.textile:ipfslite:0.1.4'
     }
 }
 
 allprojects {
     repositories {
         google()
+        jcenter()
         mavenCentral()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.aliyun.com/repository/releases" }
